--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ swfobject.embedSWF('layout/scripts/piecemaker/piecemaker.swf', 'piecemaker', '96
       <h1><a href="index.html">Site Name</a></h1>
       
     </div>
-    
+    <!-- I have chnached this thsis for atetets -->
       <div id="topnav">
       <ul>
         <li class="last"><a href="pages/contacts.html">Contact Us</a></li>
