test commint option 2
test commint option 2

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ swfobject.embedSWF('layout/scripts/piecemaker/piecemaker.swf', 'piecemaker', '96
   </div>
   <div id="backtotop"><a href="#top" class="topOfPage">To The Top</a></div>
 </div>
-<!-- ####################################################################################################### -->
+<!-- ###################  yeh heh he I need test two with next commit option #################################################################################### -->
 <div class="wrapper">
   <div id="copyright" class="clear">
     <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Domain Name</a></p>
