--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ swfobject.embedSWF('layout/scripts/piecemaker/piecemaker.swf', 'piecemaker', '96
   <div id="footer" class="clear">
   
     </div>
-    <!-- ####################################################################################################### -->
+    <!-- ################################this chnages from laocl reposrty ####################################################################### -->
     
         <!-- ########### -->
        
